<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:fitsSystemWindows="true"
    android:theme="@style/SettingsTheme">

    <com.raddyr.core.ui.components.MyToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarTitle="@string/profile_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/header"
                style="@style/MainPrimaryHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:text="@string/informations"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profileCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="@dimen/spacing_small"
                app:layout_constraintTop_toBottomOf="@id/header">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/spacing_normal"
                    android:paddingVertical="@dimen/spacing_normal">

                    <TextView
                        android:id="@+id/loginLabel"
                        style="?label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/loginValue"
                        style="?value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@id/loginLabel"
                        tools:text="danielloBaziakello" />

                    <TextView
                        android:id="@+id/emailLabel"
                        style="?label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/loginValue" />

                    <TextView
                        android:id="@+id/emailValue"
                        style="?value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@id/emailLabel"
                        tools:text="daniel@baziak.pl" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/header2"
                style="@style/MainPrimaryHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/products"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileCard" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="@dimen/spacing_small"
                app:layout_constraintTop_toBottomOf="@id/header2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/spacing_normal"
                    android:paddingVertical="@dimen/spacing_normal">

                    <TextView
                        android:id="@+id/ownProductsLabel"
                        style="?label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_own_products"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/totalOwnProductsValue"
                        style="?value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ownProductsLabel"
                        tools:text="120" />

                    <TextView
                        android:id="@+id/totalSharedProductsLabel"
                        style="?label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/total_shared_products"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/totalOwnProductsValue" />

                    <TextView
                        android:id="@+id/totalSharedProductsValue"
                        style="?value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/totalSharedProductsLabel"
                        tools:text="120" />

                    <TextView
                        android:id="@+id/productsSharedLabel"
                        style="?label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/products_shared"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/totalSharedProductsValue" />

                    <TextView
                        android:id="@+id/productSharedValue"
                        style="?value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@id/productsSharedLabel"
                        tools:text="tak" />

                    <TextView
                        android:id="@+id/peopleLabel"
                        style="?label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/people_shared_products"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/productSharedValue" />

                    <TextView
                        android:id="@+id/peopleValue"
                        style="?value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@id/peopleLabel"
                        tools:text="Daniel, Radek, Dziadek" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/peopleProductsGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:constraint_referenced_ids="peopleLabel, peopleValue, totalSharedProductsValue, totalSharedProductsLabel" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:width="200dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>